<resources>
    <string name="app_name">Bloom</string>
    <string name="welcome_subtitle_text">Beautiful home garden solutions</string>
    <string name="create_account">Create account</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in_subtitle">Log in with email</string>
    <string name="sign_up_subtitle">Sign up with email</string>
    <string name="email_address">Email address</string>
    <string name="password">Password(8+ characters)</string>
    <string name="t_c_text">By clicking, you agree to our <a href=""> Terms of Use</a> and consent to our <a href="">Privacy Policy</a></string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_favourites">Favourites</string>
    <string name="title_search">Search</string>
    <string name="title_profile">Profile</string>
    <string name="title_cart">Cart</string>
    <string name="search_view_hint">Search</string>
    <string name="browse_themes">Browse themes</string>
    <string name="desert_chic">Desert chic</string>
    <string name="tiny_terrarium">Tiny terrarium</string>
    <string name="jungle_vibes">Jungle vibes</string>
    <string name="easy_care">Easy care</string>
    <string name="statements">Statements</string>
    <string name="design_your_home_garden">Design your home garden</string>
    <string name="add_text">ADD</string>
    <string name="cancel">Cancel</string>
    <string-array name="download_image_channel">
        <item name="image_download_channel_name">Image Download</item>
        <item name="channel_description">Downloading specified Image</item>
        <item name="content_text_when_running">Downloading Image</item>
        <item name="content_text_when_finished">Download complete</item>
    </string-array>
</resources>